@@ -1,8 +1,8 @@
 Package: raster
 Type: Package
 Title: Geographic analysis and modeling with raster data
-Version: 1.9-98
-Date: 31-May-2012
+Version: 1.9-99
+Date: 1-June-2012
 Depends: methods, sp, R (>= 2.13.0)
 Suggests: rgdal (>= 0.6-28), rgeos (>= 0.2-3), ncdf, igraph0, snow, tcltk
 Author: Robert J. Hijmans & Jacob van Etten
